# paseo

./: Cargo.toml  README.md
src/: cli.rs  main.rs  store.rs
src/core/: mod.rs  operations.rs  paseo.rs  path_entry.rs
src/core/exporter/: bash.rs  mod.rs
src/core/importer/: bash.rs  mod.rs
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
src/store/: mod.rs  utils.rs
