[package]
name = "paseo"
authors = ["Madhavan Raja"]
description = """A CLI tool to elegantly manage your shell's PATH variable"""
version = "0.0.1-alpha"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/madhavan-raja/paseo"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "string"] }
clap_complete = "4.6.2"
dirs = "6.0.0"
strum = { version = "0.28.0", features = ["derive"] }
